--- a/carpalx.bundle/Contents/version.plist
+++ b/carpalx.bundle/Contents/version.plist
@@ -5,7 +5,7 @@
 	<key>BuildVersion</key>
 	<string>1.0</string>
 	<key>ProjectName</key>
-	<string>carpalx</string>
+	<string>Carpalx</string>
 	<key>SourceVersion</key>
 	<string>1000</string>
 </dict>
